<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_sort"
        android:contentDescription="@string/descending"
        android:title="@string/sort"
        android:icon="@drawable/descending_order"
        app:showAsAction="always"/>
</menu>